* Thu Jul 23 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Check multiple VOMS issuer certs if present, and
  use most permissive time range they provide
- Change (GRSTerrorLogFunc) to return int, to allow 
  if-less C macro using && instead.
* Fri Jul 03 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.4 ====
* Thu Jul 02 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Use lib/lib64 for mod_gridsite.so location in 
  Makefile and make-gridsite-spec
* Wed Jul 01 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.3 ====
* Wed Jul 01 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Tidy up debugging messages
- Fix URL encoding bug in DN lists (' ' vs '+')
* Tue Jun 30 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.2 ====
* Tue Jun 30 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Merge in VOMS LSC support
* Tue Jun 30 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.1 ====
* Thu Jan 29 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Merge in private version changes from Yibiao Li.
- Merge in major 1.7.x vs 1.5.x divergences.
* Fri Feb 8 2008 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.0 ====
* Thu Nov 15 2007 Andrew McNab <Andrew.McNab@cern.ch>
- Add libgridsite_nossl.[so|a] with no dependencies 
  on OpenSSL (for gLite L&B.)
* Thu Nov 15 2007 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.7 ====
* Fri Nov 9 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Many changes, including switch to AURI internal
  format for credentials
* Fri Nov 9 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.5 ====
* Wed Jun 13 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include ctx->param->flags fix in mod_gridsite for
  OpenSSL 0.9.8 from Bruno Harbulot.
- Restrict export of VOMS attributes to ones present
  in the last proxy of the chain to contain attributes
* Fri May 10 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.1 ====